--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Learning Cytoscape.js</title>
 	<script src="jquery-1.11.2.min.js"></script>
 	<script src="cytoscape.js-2.3.16/build/cytoscape.min.js"></script>
+	<script src="bluebird.min.js"></script>
 	<script src="code.js"></script>
 </head>
 <body>
